# Player

./: .gitignore  CMakeLists.txt  Player.rc  README.md  fullscreentool.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pathsel.cpp  pathsel.h  resources.qrc  videofile.cpp  videofile.h  videomanager.cpp  videomanager.h  videoplayer.cpp  videoplayer.h
ui/: settingswidget.cpp  settingswidget.h  settingswidget.ui
